# Project-Agora

./: .gitignore  HANDOFF.md  README.md  TEARDOWN.md  pyproject.toml  requirements.txt
.claude/: launch.json
.obsidian/: workspace.json
engine/agora/: __init__.py  analytics.py  benchmark.py  book.py  engine.py  instrument.py  orders.py  simulation.py  traders.py
tests/: conftest.py  test_instrument.py  test_matching.py  test_queue.py  test_simulation.py
vault/00-index/: Home.md  Roadmap.md  Status.md
vault/10-concepts/: Decision-Intelligence.md  Financial-Instruments.md  Market-Participants.md  Queue-Position-and-Latency.md
vault/20-decisions/: ADR-0001-stack.md  ADR-0003-console-runtime.md
vault/30-guides/: Deploy-to-Vercel.md  Engine-Architecture.md
vault/40-glossary/: Bid-Ask-Spread.md  Contract-Multiplier.md  Liquidity.md  Lot-Size.md  Market-Impact.md  Market-Maker.md  Order-Book.md  Passive-vs-Aggressive.md  Price-Discovery.md  Price-Time-Priority.md  Tick-Size.md
vault/50-milestones/: Milestone-01-Exchange-Fundamentals.md  Milestone-02-Financial-Instruments.md  Milestone-09-Console.md  Milestone-10-Multi-Asset.md
vault/90-references/: Reading-List.md
web/console/: DESIGN.md  PRODUCT.md  package-lock.json  package.json
web/console/app/: globals.css  layout.tsx  page.tsx
web/console/components/: CandleChart.tsx  DepthMap.tsx  OrderTicket.tsx  QueuePanel.tsx  ScenarioLab.tsx  Sparkline.tsx  TraderControls.tsx
web/console/lib/: engine.ts  scenario.ts  simulation.ts  traders.ts  world.ts
