[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-engine"
version = "0.1.0"
description = "A first-principles electronic exchange & market-microstructure simulator"
requires-python = ">=3.11"
dependencies = ["sortedcontainers>=2.4"]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "pydantic>=2"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["engine"]

[tool.pytest.ini_options]
pythonpath = ["engine"]
testpaths = ["tests"]
